// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceNotifications Component renders correctly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-0 iconButton {
  margin-right: 8px;
}

<div
  class="header-section"
  data-mui-internal-clone-element="true"
>
  <a
    class=""
    href="/devices"
  >
    <span>
      100
    </span>
    <span
      id="limit"
    >
      /
      1,000
    </span>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
      data-testid="DeveloperBoardIcon"
      focusable="false"
      style="margin: 0px 7px 0px 10px; font-size: 20px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 9V7h-2V5c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-2h2v-2h-2v-2h2v-2h-2V9zm-4 10H4V5h14zM6 13h5v4H6zm6-6h4v3h-4zM6 7h5v5H6zm6 4h4v6h-4z"
      />
    </svg>
  </a>
  <a
    href="/devices/pending"
    style="margin-left: 7px;"
  >
    10
     pending
  </a>
</div>
`;

exports[`DeviceNotifications Component renders correctly at limit 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-0 iconButton {
  margin-right: 8px;
}

<div
  class="header-section"
  data-mui-internal-clone-element="true"
>
  <a
    class="warning"
    href="/devices"
  >
    <span>
      250
    </span>
    <span
      id="limit"
    >
      /
      250
    </span>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
      data-testid="DeveloperBoardIcon"
      focusable="false"
      style="margin: 0px 7px 0px 10px; font-size: 20px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 9V7h-2V5c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-2h2v-2h-2v-2h2v-2h-2V9zm-4 10H4V5h14zM6 13h5v4H6zm6-6h4v3h-4zM6 7h5v5H6zm6 4h4v6h-4z"
      />
    </svg>
  </a>
  <a
    class="warning"
    href="/devices/pending"
    style="margin-left: 7px;"
  >
    5
     pending
  </a>
</div>
`;

exports[`DeviceNotifications Component renders correctly close to limits 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-0 iconButton {
  margin-right: 8px;
}

<div
  class="header-section"
  data-mui-internal-clone-element="true"
>
  <a
    class="approaching"
    href="/devices"
  >
    <span>
      240
    </span>
    <span
      id="limit"
    >
      /
      250
    </span>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
      data-testid="DeveloperBoardIcon"
      focusable="false"
      style="margin: 0px 7px 0px 10px; font-size: 20px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 9V7h-2V5c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-2h2v-2h-2v-2h2v-2h-2V9zm-4 10H4V5h14zM6 13h5v4H6zm6-6h4v3h-4zM6 7h5v5H6zm6 4h4v6h-4z"
      />
    </svg>
  </a>
  <a
    href="/devices/pending"
    style="margin-left: 7px;"
  >
    5
     pending
  </a>
</div>
`;

exports[`DeviceNotifications Component renders correctly with limits 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-0 iconButton {
  margin-right: 8px;
}

<div
  class="header-section"
  data-mui-internal-clone-element="true"
>
  <a
    class=""
    href="/devices"
  >
    <span>
      40
    </span>
    <span
      id="limit"
    >
      /
      250
    </span>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
      data-testid="DeveloperBoardIcon"
      focusable="false"
      style="margin: 0px 7px 0px 10px; font-size: 20px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 9V7h-2V5c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-2h2v-2h-2v-2h2v-2h-2V9zm-4 10H4V5h14zM6 13h5v4H6zm6-6h4v3h-4zM6 7h5v5H6zm6 4h4v6h-4z"
      />
    </svg>
  </a>
  <a
    href="/devices/pending"
    style="margin-left: 7px;"
  >
    5
     pending
  </a>
</div>
`;

exports[`DeviceNotifications Component renders correctly without limits 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-0 iconButton {
  margin-right: 8px;
}

<div
  class="header-section"
>
  <a
    class=""
    href="/devices"
  >
    <span>
      240
    </span>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
      data-testid="DeveloperBoardIcon"
      focusable="false"
      style="margin: 0px 7px 0px 10px; font-size: 20px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 9V7h-2V5c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-2h2v-2h-2v-2h2v-2h-2V9zm-4 10H4V5h14zM6 13h5v4H6zm6-6h4v3h-4zM6 7h5v5H6zm6 4h4v6h-4z"
      />
    </svg>
  </a>
  <a
    href="/devices/pending"
    style="margin-left: 7px;"
  >
    5
     pending
  </a>
</div>
`;
